StanleyMQBio.CSS
/* #landing{
    height: 100%;
    background-image: url('https://github.com/StanStanley512/MediaQueryResponsive/blob/master/castle.JPG?raw=true');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
}; */

.parallax {
    position:relative;
    z-index:1;
    height:650px;
    /* -webkit-box-shadow: inset 0px -6px 5px rgba(50, 50, 50, 0.75);
  -moz-box-shadow: inset 0px -6px 5px rgba(50, 50, 50, 0.75);
  box-shadow: inset 0px -6px 5px rgba(50, 50, 50, 0.75); */
  }

  #trans1 {
    background: url('https://github.com/StanStanley512/MediaQueryResponsive/blob/master/castle.JPG?raw=true') no-repeat fixed;
    height:575px;
    background-position: center top;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
  }

  #trans2 {
    background: url('https://github.com/StanStanley512/UpdatedPortfolio/blob/master/prague.JPG?raw=true') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height:625px;
  }

 @media screen and (max-width: 980px) {
    #landing{
    height: 100%;
    background-image: url('https://github.com/StanStanley512/MediaQueryResponsive/blob/master/castle.JPG?raw=true');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
};
 @media screen and (max-width: 768px) {
   #landing{
    height: 100%;
    background-image: url('https://github.com/StanStanley512/MediaQueryResponsive/blob/master/castle.JPG?raw=true');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
};
 @media screen and (max-width: 640px) {
   #landing{
    height: 100%;
    background-image: url('https://github.com/StanStanley512/MediaQueryResponsive/blob/master/castle.JPG?raw=true');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
};

